--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
 </head>
-<body style="font-family: 'Inter' !important;">
+<body class="bg-primary-color" style="font-family: 'Inter' !important;">
   <app-root></app-root>
 </body>
 </html>
